<resources>
    <string name="app_name">API Toolz</string>
    <string name="facebook_app_id">149984972255474</string>
    <string name="fb_login_protocol_scheme">fb149984972255474</string>
    <string name="facebook_account_kit_client_token">c2fbc59ccfa2a2e4d5223464fc8413df</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="continue_facebook">Continue with Facebook</string>
    <string name="user_name">Username</string>
    <string name="phone_no">Phone number</string>
    <string name="create_account">Create new account</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="name">Name</string>
    <string name="pls_enter_name">Please enter name</string>
    <string name="pls_enter_email">Please enter email</string>
    <string name="pls_enter_password">Please enter password</string>
    <string name="pls_enter_phone">Please enter phone</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="pls_enter_fname">Please enter first name</string>
    <string name="pls_enter_lname">Please enter last name</string>
    <string name="invalid_authenticate">Invalid Authentication</string>
    <string name="try_again">Try Again</string>
    <string name="invalid_value">Invalid Value</string>
    <string name="email_phone">Email (or) Phone number</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="edit_account">Edit Account</string>
    <string name="pls_enter_new_password">Please enter new password</string>
    <string name="pls_enter_confirm_password">Please enter confirm password</string>
    <string name="profile">Profile</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="call_us">Call us</string>
    <string name="help_us">Help us</string>
    <string name="about_us">About us</string>
    <string name="share">Share</string>
    <string name="sign_in">Sign In</string>
    <string name="logout">Sign out</string>
    <string name="gender">Gender</string>
    <string name="pls_match_confirm_password">Don\'t match two passwords</string>
</resources>
